tests/ui/once_expires_non_expires_type.stderr
error[E0277]: the trait bound `String: Expires` is not satisfied
 --> tests/ui/once_expires_non_expires_type.rs:3:1
  |
3 | #[once(expires = true)]
  | ^^^^^^^^^^^^^^^^^^^^^^^ the trait `Expires` is not implemented for `String`
  |
  = note: this error originates in the attribute macro `once` (in Nightly builds, run with -Z macro-backtrace for more info)
